# rushroster-field

./: .gitignore  README.md  claude.md  config.yaml.example  main.py  pyproject.toml
src/: __init__.py  config.py
src/api/: __init__.py  api.py  hud.py  models.py
src/api/routes/: __init__.py  camera_routes.py  config_routes.py  events_routes.py  sensors_routes.py  stats_routes.py  status_routes.py  sync_routes.py  ui_routes.py
src/database/: __init__.py  sqlite_manager.py
src/detection/: __init__.py  burst_detection_module.py  sync_module.py
src/sensors/: __init__.py  async_frame_processor.py  burst_capture.py  camera.py  object_detector.py  radar.py  smart_capture.py
src/ui/templates/: dashboard.html  events.html  settings.html
src/upload/: __init__.py  sync_service.py
